# media-server-1

./: .gitignore  Cargo.toml  README.md  build.rs  media-server-config.toml
src/: config.rs  error.rs  main.rs
src/api/: mod.rs  status.rs
src/api/index/: files.rs  mod.rs
src/cdn/: files.rs  mod.rs
src/logging/: default.log4rs.yaml  ffmpeg.rs  mod.rs
src/util/: ffmpeg.rs  mod.rs  path.rs  web.rs
web/: .gitignore  README.md  angular.json  karma.conf.js  package-lock.json  package.json
web/e2e/src/: app.e2e-spec.ts
web/src/: index.html  styles.scss
web/src/app/: anchor.service.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  backend.service.ts  backend.types.ts  markdown-util.ts  paths.ts
web/src/app/browse/: browse.component.html  browse.component.ts
web/src/app/browse-directory/: browse-directory.component.html  browse-directory.component.spec.ts  browse-directory.component.ts
web/src/app/browse-error/: browse-error.component.spec.ts  browse-error.component.ts
web/src/app/browse-media-file/: browse-media-file.component.html  browse-media-file.component.spec.ts  browse-media-file.component.ts
web/src/app/menu-bar/: menu-bar.component.html  menu-bar.component.ts
web/src/app/welcome/: welcome.component.html  welcome.component.ts
web/src/environments/: environment.prod.ts  environment.serve.ts  environment.ts
