[package]
name = "media-server-1"
version = "0.1.0"
authors = ["Kneelawk <kneelawk@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "^0.5.0"
actix-service = "^1.0.6"
actix-web = "^3.3.2"
anyhow = "^1.0.40"
chrono = "^0.4.19"
derive_more = "^0.99.11"
dirs = "^3.0.2"
dotenv = "^0.15.0"
error-chain = "^0.12.4"
ffmpeg4 = "^0.4.0"
ffmpeg4-sys = "^4.2.2"
futures = "^0.3.15"
lazy_static = "^1.4.0"
log = "^0.4.14"
log4rs = "^1.0.0"
path-slash = "^0.1.4"
percent-encoding = "^2.1.0"
regex = "^1.4.3"
serde = "^1.0.119"
toml = "^0.5.8"
v_htmlescape = "^0.13.0"
vsprintf = "^2.0.0"
walkdir = "^2.3.2"
